--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -14,7 +14,7 @@
       <td><%= item.notes %></td>
       <td><%= link_to 'Show', item_path(item) %></td>
       <td><%= link_to 'Edit', edit_item_path(item) %></td>
-      <td><%= link_to 'Destroy', item_path(item), method: :delete %></td>
+      <td><%= link_to 'Delete', item_path(item), method: :delete %></td>
     </tr>
   <% end %>
 </table>
