--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -17,6 +17,8 @@
 <!--    <%= f.submit %>-->
 <!--  </p>-->
 <!--<% end %>-->
+<!--===================================================================================================================-->
+<h1>Thank you for your like!</h1>
 
 <!--this is to surf through pages, like <a> tags in html-->
 <%= link_to 'Back to List', items_path %>
