--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,5 +1,5 @@
 <!--#last page-->
-<h1>Your item has been saved!</h1>
+<h1 id="main_head">Your post has been saved!</h1>
 
 <p>
   <strong>Todo:</strong>
