--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,9 @@
-<h1>Hello and Welcome!</h1>
-<%= link_to 'My Todo List', controller: 'items' %>
+<h1 id="welcome_head" >Hello and Welcome!</h1>
 
+
+<p> HERE, YOU ARE FREE TO SPEAK YOUR MIND OUT!</p>
+
+
+<%= link_to 'My Todo List', controller: 'items' %>
 <!--this is to surf through pages, like <a> tags in html-->
 <!--<%= link_to 'go to new item', items_path %>-->
