edited homepage image

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -32,11 +32,11 @@
 
              <p> HERE, YOU ARE FREE TO SPEAK YOUR MIND OUT!</p>
 
-              <%= link_to "Submit your Post!", controller: 'items', class: "btn btn-lg btn-primary"  %>
+              <%= link_to "Submit your Post!", controller: 'items', class: "btn btn-lg btn-primary"  %> <br>
+              
+              <%= link_to image_tag("http://icons.iconarchive.com/icons/paomedia/small-n-flat/1024/post-it-icon.png", alt: "Rails logo", :size => "100x100"), controller: 'items' %>
         </div>
         
-        <%= link_to image_tag("http://icons.iconarchive.com/icons/paomedia/small-n-flat/1024/post-it-icon.png", alt: "Rails logo", :size => "100x100") %>
-
         <footer class="footer">
           <small>
             This page was made with a lot of hard work and sleepless nights</a>
