edited the link page, added images and links

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -106,3 +106,15 @@ footer {
     width: 120px;
     text-align: center;
 }
+
+.float{
+    margin: 0px 25px 10px 0px;
+    border: none;
+    float: left;
+}
+
+.float2{
+    margin: 25px;
+    border: none;
+    float: left;
+}
