--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -108,13 +108,114 @@ footer {
 }
 
 .float{
-    margin: 0px 25px 10px 0px;
+    margin: 5px 5px 0 11px;
     border: none;
     float: left;
 }
+.float:hover{
+  opacity: 0.3;
+}
 
-.float2{
-    margin: 25px;
-    border: none;
-    float: left;
+/*blog page*/
+.title_bg{
+  background: #b8cdef;
+  width: 900px;
+  margin: 0 auto;
+  margin-top: -20px;
+  font-family: fantasy;
+  font-size: 175%;
+  text-align: center;
+  font-weight: bold;
+}
+.post_text_bg{
+  background: #efb8d2;
+  width: 900px;
+  margin: 0 auto;
+  margin-top: -20px;
+  text-align: center;
+  font-size: 130%;
+}
+
+#num_like{
+  font-size: 20px;
+  float: left;
+  margin: -13px 10px 0px 300px;
+  border-radius: 5px;
+  background-color: #6db0c4;
+  padding: 5px;
+}
+
+
+.like_btn{
+  background-color: #6db0c4;
+  border: 3px solid #127896;
+  padding: 5px 15px;
+  text-decoration: none;
+  text-align: center;
+  font-size: 15px;
+  float: left;
+  margin: -15px 10px 0px 10px;
+  display: inline-block;
+}
+.like_btn:hover{
+    box-shadow: 0 12px 16px 0 rgb(63, 127, 191);
+    text-decoration:none;
+}
+
+.edit_btn{
+  background-color: #a0a008;
+  border: 3px solid #cccc08;
+  padding: 5px 15px;
+  text-decoration: none;
+  text-align: center;
+  font-size: 15px;
+  float: left;
+  margin: -15px 10px 0px 10px;
+  display: inline-block;
+}
+.edit_btn:hover{
+    box-shadow: 0 12px 16px 0 rgba(255,255,0,0.3);
+    text-decoration:none;
+}
+
+.del_btn{
+  background-color: #F77777;
+  border: 3px solid #BF3F3F;
+  padding: 5px 15px;
+  text-decoration: none;
+  text-align: center;
+  font-size: 15px;
+  float: left;
+  margin: -15px 10px 0px 10px;
+  display: inline-block;
+}
+.del_btn:hover{
+    box-shadow: 0 12px 16px 0 rgb(191, 63, 63);
+    text-decoration:none;
+}
+
+.btns{
+  height: 80px;
+  width: 900px;
+  margin: 0 auto;
+}
+
+.move{
+  margin-top: -30px;
+  margin-left: 10px;
+}
+.stars{
+  margin: 10px 0px 10px 480px;
+}
+
+.center_form{
+  margin: 0 500px 0 500px;
+}
+.link_space{
+  margin-bottom: 25%;
+}
+
+.welc-pg{
+  margin-top: -10px;
+  margin-bottom: -47px;
 }
